Some cmake tidy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 
 set(source  Source/mines.cpp)
-set(binary  mines)
+set(binary  minesweeper)
 set(app     MineSweeper)
 set(version 0.0.1)
 
 #-------------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.11.4)
 include(Platform/build.cmake NO_POLICY_SCOPE)
 
 #-------------------------------------------------------------------------------
