--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,7 @@ set(source      Source/mines.cpp)
 
 set(test_source Source/test/testMineSweeperGame.cpp
                 Source/test/testMineSweeperGUI.cpp
-                Source/test/testMineSweeperPlot.cpp
-                Source/test/testMain.cpp)
+                Source/test/testMineSweeperPlot.cpp)
 
 #-------------------------------------------------------------------------------
 
