Prune the travis build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 
-os:
-   - linux
-   - osx
-
 dist: xenial
 sudo: required
+language: cpp
 
 addons:
   apt:
@@ -14,17 +11,26 @@ addons:
 before_install:
    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install sdl2; fi
 
-language: cpp
+os:
+   - linux
+   - osx
+
+compiler:
+   - clang
+   - gcc
+
+matrix:
+   excluse:
+   - os linux
+     compiler clang
+   - os osx
+     compiler gcc
 
 script:
    - mkdir build
    - cd build
    - cmake ..
    - make package
-
-compiler:
-   - clang
-   - gcc
 
 deploy:
    provider: releases
