FIx mistake with build matrix config

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ compiler:
 
 matrix:
    excluse:
-   - os linux
-     compiler clang
-   - os osx
-     compiler gcc
+   - os: linux
+     compiler: clang
+   - os: osx
+     compiler: gcc
 
 script:
    - mkdir build
