--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-#  Copyright (c) YEAR AUTHOR
+#  Copyright (c) 2019 John D. Haughton
 #
 #  Permission is hereby granted, free of charge, to any person obtaining a copy
 #  of this software and associated documentation files (the "Software"), to deal
@@ -21,7 +21,6 @@
 #-------------------------------------------------------------------------------
 
 cmake_minimum_required(VERSION 3.11.4)
-cmake_policy(SET CMP0048 NEW) # Humph! don't like having to do this
 
 project(MineSweeper
         VERSION   0.1.0
