--- a/Source/test/CMakeLists.txt
+++ b/Source/test/CMakeLists.txt
@@ -1,16 +1,16 @@
 #-------------------------------------------------------------------------------
-#  Copyright (c) 2019 John D. Haughton
-#
+#  Copyright (c) 2025 John D. Haughton
+# 
 #  Permission is hereby granted, free of charge, to any person obtaining a copy
 #  of this software and associated documentation files (the "Software"), to deal
 #  in the Software without restriction, including without limitation the rights
 #  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 #  copies of the Software, and to permit persons to whom the Software is
 #  furnished to do so, subject to the following conditions:
-#
+# 
 #  The above copyright notice and this permission notice shall be included in
 #  all copies or substantial portions of the Software.
-#
+# 
 #  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 #  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 #  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -20,19 +20,12 @@
 #  SOFTWARE.
 #-------------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 3.20)
+add_executable(test_MS
+               testMain.cpp
+               testMineSweeperGame.cpp
+               testMineSweeperGUI.cpp
+               testMineSweeperPlot.cpp)
 
-project(MineSweeper
-        LANGUAGES CXX
-        VERSION   0.2)
+target_link_libraries(test_MS GUI)
 
-add_subdirectory(Platform)
-
-add_executable(mines Source/mines.cpp)
-
-target_link_libraries(mines GUI)
-
-#-------------------------------------------------------------------------------
-# Build test
-
-add_subdirectory(Source/test)
+add_test(NAME test_MS COMMAND test_MS)
